Adding additional Edits to Big Idea 1 based on peer feedback and feedback in the Slack Channel

--- a/01.Rmd
+++ b/01.Rmd
@@ -10,16 +10,22 @@ Online retail has fundamentally changed the way that consumers shop and purchase
 
 ## The Issue at Hand
 
-Consumers put a near blind faith in the validity and veracity of online reviews, doubly so from "reputable" marketplace sites such as AirBnB, eBay, and Amazon.  Product and service offerings are frequently displayed using algorithms that take into account the value of the aggregate mean customer review for a particular service or SKU.
+Consumers put a near blind faith in the validity and veracity of online reviews, doubly so from "reputable" marketplace sites such as AirBnB, eBay, and Amazon.  According to Business Insider, “one-third of customers refuse to purchase products that have not received positive feedback from customers …” and “positive reviews increase sales by 20% on sites that implement them into the shopping experience well.” (http://www.businessinsider.com/amazon-reviews-greatly-impact-online-shopping-sales-2017-3?&platform=bi-androidapp)   Product and service offerings are frequently displayed using algorithms that take into account the value of the aggregate mean customer review for a particular service or SKU.
 
-Of particular concern is the gamesmanship of many parties in the marketplace, including the marketplace itself.  For instance, in the news recently was [a report](http://www.theblaze.com/news/2017/09/15/amazon-deleted-almost-all-of-the-negative-reviews-of-clintons-new-book-heres-why/) of a signficant change to Secretary Clinton's new memoir, which previously displayed a very very strong bimodal distribution, (the vast majority of reviews clustering at one and five).  However, overnight, the marketplace seller, Amazon removed 900+ reviews, the vast preponderance of those being negative.
+Of particular concern is the gamesmanship of many parties in the marketplace, including the marketplace itself.  For instance, in the news recently was [a report](http://www.theblaze.com/news/2017/09/15/amazon-deleted-almost-all-of-the-negative-reviews-of-clintons-new-book-heres-why/) of a significant change to Secretary Clinton's new memoir, which previously displayed a very strong bimodal distribution, (the vast majority of reviews clustering at one and five).  However, overnight, the marketplace seller, Amazon removed 900+ reviews, the vast preponderance of those being negative.
 
-Both the vendor, book publisher Simon and Shuster, and Amazon articulated their perspective of: "“It seems highly unlikely that approximately 1,500 people read Hillary Clinton’s book overnight and came to the stark conclusion that it is either brilliant or awful..." however, the vast majority of reviews removed were the negative reviews. - Prior to the removal, the book had nearly 1,700 reviews, with nearly 50% one-star, and 45% five star.  Following the re-adjustment, 95% of the "hundreds" of reviews that remained were very positive of the book.
+The vendor, book publisher Simon and Shuster, and Amazon all articulated their perspective of: "It seems highly unlikely that approximately 1,500 people read Hillary Clinton’s book overnight and came to the stark conclusion that it is either brilliant or awful..." however, the vast majority of reviews removed were the negative reviews. - Prior to the removal, the book had nearly 1,700 reviews, with nearly 50% one-star, and 45% five star.  Following the re-adjustment, 95% of the "hundreds" of reviews that remained were very positive of the book.
 
-Regardless of where one might stand politically, or the quality of Secretary Clinton's memoir, this situation seems to demonstrate a signficant issue with the reliance on online reviews and manipulation by the actors involved in the sale and purchase of the merchandise.
-
-## Call to Action & Implementation of Data Science: 
+Regardless of where one might stand politically, or the quality of Secretary Clinton's memoir, this situation seems to demonstrate a significant issue with the reliance on online reviews and manipulation by the actors involved in the sale and purchase of the merchandise.
 
 Beyond the example above, there are other abuses of online reviews, and few solutions to help customers make informed decisions about products.  A further example can be illustrated in a thought experiment: would you more likely buy two identical goods, but one with two five star rating, or one with ten four star ratings?  In many marketplaces, the former good would rank higher, leading to a (potentially) less favorable outcome for customers, and one that incents vendors to undertake bad actions early on during a product launch to ensure a product's success.
 
-Review transparency and application of statistical analysies such as confidence intervals could help aid consumers on such ecommerce sites, perhaps through the creation of a browser-plugin or tool.  
+## Call to Action & Implementation of Data Science: 
+
+We have identified two issues: the inability to see the change over time of a review, and how to compare products with different numbers of reviews.  Websites could cede control over their reviews to a neutral third party, such as [Trustpilot]( https://www.trustpilot.com/), though it is unlikely that outside of significant customer backlash, large marketplaces would be incented to do so.
+
+Review transparency through the introduction of a review tracker, such as those that track [prices]( https://camelcamelcamel.com/) [currently]( https://keepa.com/)  and application of statistical analysis such as [confidence intervals]( https://www.evanmiller.org/how-not-to-sort-by-average-rating.html) could help aid consumers on such ecommerce sites, perhaps through the creation of a browser-plugin or tool just like Keepa and Camel Camel Camel.  
+
+Some marketplaces, such as Valve’s Steam have [incorporated]( https://arstechnica.com/gaming/2017/09/steam-has-a-review-bomb-problem-but-will-todays-new-feature-fix-it/?amp=1) histograms to help provide transparency over the course of time, as computer games have long been a target for malicious activity (known as “review bombing”), though no highly-trafficked site has implemented confidence intervals, possibly due to the greater nuances required with explaining the concept to customers and bias of upending a paradigm that currently works “well enough.”
+
+
