--- a/02.Rmd
+++ b/02.Rmd
@@ -4,24 +4,26 @@
 
 Competitive Strategy, Job Postings, Hiring, Company Research, Competitive Insights, Corporate Strategy
 
-## The Environment
+## A Major Purpose of Competitive Strategy is Getting an Advantage
 
 Competitive strategy is a cornerstone for any MBA education because it is applied so frequently in business - in the decision to develop new products and services, conduct M&A activities among many others.  Competitors and investors examine corporate decisions and movements oftentimes with a close eye to understand the motivations of a company and whether a response is necessary.  Indeed, these activities span the gamut from secret shopping, industry and sector research, to corporate espionage.   Any nugget of information regarding a company’s strategy could yield millions or billions worth of increased forward-looking revenue.
 
-## The Issue at Hand
+## Most Corporate Development Information is Secret – Except When You Need Outside Help
 
 In many industries, arms-races occur for the development of new products, service offerings, or expansion into new geographies and in many instances, the internal discussions and decisions involving these plans are highly sensitive.  Outside stakeholders, whether they are investors, competitors, or partners who wish to capitalize off of a company’s new direction frequently cannot afford to not pay attention to the actions (or inaction) of a major player in their industry.
 
-With the rise of the Internet, job hunting and recruiting has migrated from the classifieds section in newspapers and bulletin boards, to job boards and careers sections in company websites.  Frequently, for new initiatives in new domains or geographies, companies must hire new talent – a public insight into what could be the outcome of very private executive-level decision. 
+With the rise of the Internet, job hunting and recruiting has migrated from the classifieds section in newspapers and bulletin boards, to job boards and careers sections in company websites.  Frequently, for new initiatives in unfamiliar domains or geographies, companies must hire outside talent potentially yielding public visibility into what could be the outcome of very private, executive-level decision. 
 
-Currently, there are few to no comprehensive platforms to go about scraping, cataloging, and analyzing the job postings and descriptions from companies online.  This opportunity could significantly benefit other market players and investors, such as hedge funds seeking additional information to incorporate into their strategy or investment thesis.  In other words, the data is there, but it is not being capitalized.  
+Currently, there are no comprehensive platforms to go about scraping, cataloging, and analyzing the job postings and descriptions from companies online.  This opportunity could significantly benefit other market players and investors, such as hedge funds seeking additional information to incorporate into their strategy or investment thesis.  In other words, the data are there, but it is not being leveraged.  
 
-## Call to Action & Implementation of Data Science: 
+## Working the un-worked data for Profit
 
 I am advocating for the development of a tool to help scrape, analyze, and classify new job postings on a company’s career webpage to gain further insight into a company’s direction and decision making.  Currently the data is not being aggregated and synthesized into meaningful and actionable content – which could be useful to vendors, competitors, investors, and potential partners.  
 
 For example, would we have been able to foretell the development of Google’s foray into becoming an ISP through their posting of job openings for ISP-related roles?  Or perhaps could we also have identified the limited success and possible reorganization of the same initiative by identifying a reduction in hiring in certain geographies?
 
-Perhaps more prospectively, would we be able to predict if and when Amazon begins their push into the Pharmaceutical market?  The implications for online and mail order prescription services could be significant, doubly so for shareholders and investors.  
+Perhaps more prospectively, would we be able to predict if and when Amazon begins their push into the pharmaceutical market?  The implications for online and mail order prescription services could be significant, doubly so for shareholders and investors.  
 
 By leveraging data science to draw out these insights, we would be able to bring additional clarity into a previously less-clear area of competitive strategy.  
+
+While the technical implementation will require additional thought, a rudimentary proof-of-concept system could be developed from scraping the careers pages from a handful of large corporations.  The data could then be parsed for title, skills, and geographies and then assembled and cross-checked with an established ontological system.  For public companies, an n-gram analysis could be conducted to identify senior management positions that do not have disclosure on their 10Ks or 10Qs, which could lead to a hypothesis of a new geography or product/service push.  
