Rewrite of First Big Idea

--- a/01.Rmd
+++ b/01.Rmd
@@ -1,30 +1,26 @@
-# Online Reviews are Broken {#FixOnlineReviews}
-<!-- Consider signaling the solution in the title as well as the problem.-->
+# Review Bombs Break Online Reviews and Data Science Transparency is the Answer {#OnlineReviewBombsAndDataScience}
 #### Keywords
 
-Online Reviews, Amazon, Customer Reviews
-<!-- add tech keywords -->
-## The Environment
+Online Review Bombs, Review Bombs, Online Reviews, eBay, Amazon, Customer Reviews, Data Science, Visualizations, Statistics, Histograms, Data Transparency, Reviews Transparency, Reviews, Customer Review, Valve, Steam, Etsy, Verified Reviews
+## E-Commerce has altered how we shop and think about shopping
 
-Online retail has fundamentally changed the way that consumers shop and purchase goods.  Popularized early during the rise of e-commerce was the inclusion of the voice of the customer in product reviews and testimonials. These reviews became commonplace and quantified with the maturation of online shopping, but abuse by vendors, marketplaces, and customers PHRASE THAT CAPTURES VALUE PROPOSITION.
+Online retail has displaced a significant amount of brick-and-mortar retail and in doing so, fundamentally changed the way that consumers shop and purchase goods.  If the rapid growth of Amazon and Walmart’s online offerings are any indication, retail e-commerce will continue to grow at a breakneck speed.  For example, online retail sales are (expected)[ https://www.statista.com/statistics/272391/us-retail-e-commerce-sales-forecast/]  to nearly double between the period of 2016 and 2022.
 
-## The Issue at Hand
-<!--make headings more informative -->
-Consumers put a near blind faith <!-- don't overstate --> in the validity and veracity of online reviews, doubly so from "reputable" marketplace sites such as AirBnB, eBay, and Amazon.  According to Business Insider, "one-third of customers refuse to purchase products that have not received positive feedback from customers..." and "positive reviews increase sales by 20% on sites that implement them into the shopping experience well." (http://www.businessinsider.com/amazon-reviews-greatly-impact-online-shopping-sales-2017-3?&platform=bi-androidapp) <!-- paraphrase rather than quote --> Product and service offerings are frequently displayed using algorithms that take into account the mean customer rating for a particular service or SKU.
+As more and more individuals turned online to research and purchase goods, consumer behavior was altered by the inclusion of additional contextual information provided near product offerings that frequently increase products’ purchase rates.  One such example, popularized early during the rise of e-commerce, was the inclusion of the voice of the customer in product reviews and testimonials. These reviews are now a standard e-commerce practice and can provide valuable insight into products’ quality for consumers, but manipulation from some actors can occlude the true quality of a product, leading to lost consumer surplus, confidence, increased returns, and dissatisfied customers.  
 
-Of particular concern is the gamesmanship of many parties in the marketplace, including the marketplace itself.  For instance, in the news recently was [a report](http://www.theblaze.com/news/2017/09/15/amazon-deleted-almost-all-of-the-negative-reviews-of-clintons-new-book-heres-why/) of a significant change to Secretary Clinton's new memoir, which previously displayed a very strong bimodal distribution with the vast majority of reviews clustering at one and five.  However, overnight, the marketplace seller, Amazon removed more than 900 reviews, the vast <!-- too many vasts --> preponderance of those being negative.
+## Reviews: Increased Conversion, but Buyer Beware
+Many consumers place trust and confidence in online reviews – perhaps rightfully so as the theory of the “Wisdom of the Crowds” suggests.  Online reviews provide an additional signal (in addition to price, brand, availability and so forth) about the quality of a good.
+According to an [article](http://www.businessinsider.com/amazon-reviews-greatly-impact-online-shopping-sales-2017-3?&platform=bi-androidapp) by Business Insider, a distinct portion of online shoppers will refuse to purchase products lacking positive reviews from other customers.  Further, the article mentions, as we described above, that well-integrated, positive reviews have been demonstrated to increase sales by nearly 20% on some websites.  
+There is likely little doubt that the majority of individuals who write and consume online reviews do so with the best of intentions and were there no bad actors, online reviews would provide meaningful and valuable textual information to shoppers.  
+However, organizations, companies, and individuals, for the purpose of making a greater profit or message, will take advantage of the online reviews system, leading to disinformation but perhaps most damagingly, a decrease in trust.  
+One case of this occurring is illustrated during the release of former Secretary of State Hillary Clinton’s memoir on Amazon.com.  As was [reported](http://www.theblaze.com/news/2017/09/15/amazon-deleted-almost-all-of-the-negative-reviews-of-clintons-new-book-heres-why/) by many news sources, the memoir was the target of a “review bomb” where in one day, the book garnered a significant amount of one and five stars reviews.  Because Amazon was struggling to incrementally parse through a significant number of these reviews – both from verified and unverified purchasers, the reviews section of her book became overrun with political dialogue, most of these not pertaining to the memoir that was supposed to be reviewed.  
+Amazon was caught between a rock and a hard place, and to the frustration of many, removed overnight more than 900 reviews.  The vendor, book publisher Simon and Shuster, and Amazon (both who have a financial interest in the success of their products listed on the all platform) articulated their perspective highlighting that it was seemingly unlikely that nearly 1,500 individuals read Secretary Clinton’s book overnight and came to an extremely positive or negative opinion of the book.
+This is an extreme example of how online reviews can be potentially manipulated, and calls into question the right level of policing regarding reviews and targets of review bombs.
+While this type of policing can be exercised, there will be some inherent bias introduced into the policing model whether it is performed by a team of humans or an automated process designed by humans.
 
-The vendor, book publisher Simon and Shuster, and Amazon all articulated their perspective of: "It seems highly unlikely that approximately 1,500 people read Hillary Clinton’s book overnight and came to the stark conclusion that it is either brilliant or awful..." however, the vast majority of reviews removed were the negative reviews. Prior to the removal, the book had nearly 1,700 reviews, with nearly 50 percent being one star, and 45 percent five star.  Following the readjustment, 95 percent of the hundreds of reviews that remained were very positive of the book.
-
-Regardless of where one might stand politically, or the quality of Secretary Clinton's memoir, this anecdote illustrates a significant issue with the reliance on online reviews and their manipulation by the actors involved <!-- besides buyers and sellers, what other actors are interested in manipulating reviews? --> in the sale and purchase of the merchandise.
-
-Beyond the example above, there are other abuses of online reviews, and few solutions to help customers make informed decisions about products.  A further example can be illustrated in a thought experiment: would you more likely buy two identical goods, but one with two five star rating, or one with ten four star ratings?  In many marketplaces, the former good would rank higher, leading to a (potentially) less favorable outcome for customers, and one that incentivizes vendors to undertake bad actions early in a product launch to ensure its success.
-
-## Call to Action & Implementation of Data Science
-
-We have identified two issues: the inability to see the change over time of a review, and how to compare products with different numbers of reviews.  Websites could cede control over their reviews to a neutral third party, such as [Trustpilot]( https://www.trustpilot.com/), though it is unlikely that outside of significant customer backlash, large vendors would do so.
-<!-- market == marketplace ?? Amazon is not a market in an economic sense. -->
-Review transparency through the introduction of a review tracker, such as those that track [prices]( https://camelcamelcamel.com/) [currently]( https://keepa.com/)  and application of statistical analysis such as [confidence intervals]( https://www.evanmiller.org/how-not-to-sort-by-average-rating.html) could help aid consumers on such ecommerce sites, perhaps through the creation of a browser-plugin or tool just like Keepa and Camel Camel Camel.  
-<!--Don't point to references without explaining what the references say. Assume your reader will not follow your sources or read your footnotes. Everything necessary to understand your argument should be stated in the body of the text.-->
-<!-- laudable effort at defining the problem. Only now do you begin to suggest solutions. -->
-Some marketplaces, such as Valve’s Steam have [incorporated]( https://arstechnica.com/gaming/2017/09/steam-has-a-review-bomb-problem-but-will-todays-new-feature-fix-it/?amp=1) histograms to help provide transparency over the course of time, as computer games have long been a target for malicious activity (known as "review bombing"). No highly-trafficked site has implemented confidence intervals, possibly due to the greater nuances required with explaining the concept to customers and bias of upending a paradigm that currently works "well enough."
+##Smarter Consumers & Purchases through Data Science
+What is required is an application of data science visualization and data representation that is easily consumable by the average consumer that allows her to individually tease out any potential review bombs and bias and discount any of these less-than-genuine reviews.
+One easy win to combat review bombing and malicious activity is for websites to prohibit or severely discount (perhaps in the exclusion of aggregate ratings) reviews from non-verified purchases.  
+For sites wishing to further combat review bombs, the display of a histogram of reviews over a period of time is a straightforward solution.  Some marketplaces, such as Valve’s Steam, which has had a longstanding review bomb problem, have [incorporated]( https://arstechnica.com/gaming/2017/09/steam-has-a-review-bomb-problem-but-will-todays-new-feature-fix-it/?amp=1) histograms to help provide transparency over the course of time.  
+While it is difficult to inspire or encourage a large corporations to make a significant change in a core line of business where conversion rates of tenths of a percent can equate to millions of dollars, I am instead advocating for the development of a new website that would scrape eCommerce websites like Amazon, Ebay or Etsy and proactively filter out or de-prioritize unverified reviews, but also organize their reviews in a manner that allows users to more easily identify any possible review bombs (or even potential changes in product quality), through visual graphics like histograms.  Going one step further, an enhanced product-search experience could be developed that could compare the specific reviews (and prices) of products from different websites and link back to the original website, monetizing based upon a revenue share agreement.  
+Online review bombs, misinformation, and misunderstanding of reviews present a serious barrier for online shoppers to fully understand the quality of a product.  While ecommerce firms are right to tread cautiously when changing the paradigm of online consumer shopping experiences, the potential ramifications of inaction can lead to deleterious effects for current and future customers, and shareholders.  The creation of a proof-of-concept website that prioritizes validated customer reviews in a transparent display with integrated histograms would go a long way to solving these issues.
